Added placeholders for empty server list

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <div id="gamecard">
         <div id="cardheaderborder">
             <div id="cardheader">
-                <div id="title"></div>
-                <img id="mappic">
+                <div id="title"><b>No Server Selected</b></div>
+                <img id="mappic" src="images/maps/mainmenu.png">
                 <img id="varpic">
             </div>
         </div>
-        <div id="scoreboard"></div>
+        <div id="scoreboard"><b>Scoreboard Unavailable</b></div>
         <div id="gameinfoborder">
             <div id="gameinfo">
-                <div id="host"></div>
-                <div id="name"></div>
+                <div id="host"><b>Host:</b> N/A</div>
+                <div id="name"><b>Name:</b> N/A</div>
                 <div id="voip"></div>
                 <div id="sprint"></div>
                 <div id="version"></div>
