More data, more tweaking

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <div id="name"><b>Name:</b> N/A</div>
                 <div id="voip"></div>
                 <div id="sprint"></div>
+                <div id="status"></div>
                 <div id="version"></div>
             </div>
         </div>
