Now shows mainmenu if referencing an unknown map file
Eventually I should make an "unknown", but this at least keeps things
from breaking

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="cardheaderborder">
             <div id="cardheader">
                 <div id="title"><b>No Server Selected</b></div>
-                <img id="mappic" src="images/maps/mainmenu.png">
+                <img id="mappic">
                 <img id="varpic">
             </div>
         </div>
