Added IP to the gameinfo / removed the cursor (which wasn't working anyways)

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <div id="voip"></div>
                 <div id="sprint"></div>
                 <div id="status"></div>
+                <div id="ip"></div>
                 <div id="version"></div>
             </div>
         </div>
