Ok, done fucking with this

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="cardheader">
                 <div id="title"><b>{{capitalize variantType}} on {{map}}</b></div>
                 <img id="mappic" src="images/maps/{{mapFile}}.png" alt="{{map}}">
-                <img id="varpic" src="images/gametypes/{{variantType}}.png">
+                <img id="varpic" src="images/gametypes/{{capitalize variantType}}.png">
             </div>
         </div>
         <div id="scoreboard">
