--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="cardheaderborder">
             <div id="cardheader">
                 <div id="title"><b>{{capitalize variantType}} on {{map}}</b></div>
-                <img id="mappic" src="images/maps/{{mapFile}}.png" alt="{{map}}">
+                <img id="mappic" src="images/maps/{{mapFile}}.png" onError="this.onerror=null;this.src='images/maps/mainmenu.png';">
                 <img id="varpic" src="images/gametypes/{{capitalize variantType}}.png">
             </div>
         </div>
