--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="cardheader">
                 <div id="title"><b>{{capitalize variantType}} on {{map}}</b></div>
                 <img id="mappic" src="images/maps/{{mapFile}}.png" onError="this.onerror=null;this.src='images/maps/mainmenu.png';">
-                <img id="varpic" src="images/gametypes/{{capitalize variantType}}.png">
+                <img id="varpic" src="images/gametypes/{{lowerCase variantType}}.png">
             </div>
         </div>
         <div id="scoreboard">
