Sorting out overflow if length is set to All
Not perfect, but better

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="extBorder2">
     </div>
     </div>
-        <button class="browserSwitch" onclick="switchBrowser();">Switch to theFeelTrain browser</button>
+    <!--<button class="browserSwitch" onclick="switchBrowser();">Switch to theFeelTrain browser</button>-->
         
     <script id="gameinfo-template" type="text/x-handlebars-template">
         <div id="cardheaderborder">
