--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     <div id="extBorder2">
     </div>
     </div>
-    <button class="browserSwitch" onclick="switchBrowser();">Switch to theFeelTrain</button>
-        
+    <button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>
+    <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button>
+    
     <script id="gameinfo-template" type="text/x-handlebars-template">
         <div id="cardheaderborder">
             <div id="cardheader">
