--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>
     <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button>
     
+    <div id="party"></div>
+    
     <script id="gameinfo-template" type="text/x-handlebars-template">
         <div id="cardheaderborder">
             <div id="cardheader">
