Initial party list styling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     <button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>
     <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button>
     
-    <div id="party"></div>
+    <div id="partyBorder">
+        <div id="partyHeader">Party List<button class="addPartyMember">+</button></div>
+        <div id="party">
+        </div>
+    </div>
     
     <script id="gameinfo-template" type="text/x-handlebars-template">
         <div id="cardheaderborder">
