--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<!-- Includes -->
 		<script src="js/handlebars.min.js"></script>
 		<script src="js/jquery-1.11.3.min.js"></script>
+        <script src="js/jquery-ui.js"></script>
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -36,6 +37,12 @@
           ga('create', 'UA-72472081-1', 'auto');
           ga('send', 'pageview');
         </script>
+        <script>
+            $(function() {
+                $( "#chatBorder" ).draggable();
+                $( "#partyBorder" ).draggable();
+            });
+        </script>
 
 </head>
 
@@ -56,7 +63,8 @@
     <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button>
     
     <div id="partyBorder">
-        <div id="partyHeader">Party List<button class="addPartyMember">+</button></div>
+        <div id="partyHeader">Party List<button class="addPartyMember" onClick="showOnline();">+</button><button class="toggleChat" onClick="showChat();">Chat</button></div>
+        <div id="allOnline"></div>
         <div id="party"><!--
         <div class='friend' title="Party Leader">Orion</div>
         <div class='friend'>ScooterPSU</div>
@@ -65,7 +73,7 @@
     </div>
     
     <div id="chatBorder">
-        <div id="chatHeader">Party Chat<button class="closeChat">X</button></div>
+        <div id="chatHeader">Party Chat<button class="closeChat" onClick="showChat();">X</button></div>
         <div id="chat">
         </div>        
         <form name="message" action="">
