--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="refreshTable();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
 	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/360_Back.png"></button>
+    <button class="togglePartyList" onClick="showPartyList();">Party</button>
     <!--<div id="connectionStatus"></div>-->
     <table id="serverTable" class="display" width="100%"></table>
     <div id="gamecard">
