Focus check test code
This'll let me enable controller stuff even if the browser is staying
open

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </div>
     <button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>
     <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button>
+    <div id="message">Waiting for user action</div>
     
     <div id="partyBorder">
         <div id="partyHeader">Party List<button class="addPartyMember" onClick="showOnline();">+</button><button class="toggleChat" onClick="showChat();">Chat</button></div>
