--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="refreshTable();">Refresh</button>
 	<button class="closeButton" onclick="closeBrowser();">X</button>
-    <!--<button class="togglePartyList" onClick="showPartyList();">Party</button>-->
-    <!--<div id="connectionStatus"></div>-->
+    <button class="togglePartyList" onClick="showPartyList();">Party</button>
     <table id="serverTable" class="display" width="100%"></table>
     <div id="gamecard">
     </div>
     <div id="backgroundFrame">
     <div id="backgroundFrameInsert"></div>
     </div>
-    
+    <button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>   
+    <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button> 
     <div id="partyBorder">
         <div id="partyHeader">Party List<button class="addPartyMember" onClick="showOnline();">+</button><button class="toggleChat" onClick="showChat();">Chat</button></div>
         <div id="allOnline"></div>
