Highlight gradient, xbox control labels

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </div>
     <button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>   
     <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button> 
+    
+    <div id="xboxLabel"><img class="controllerButton" src="images/360_Y.png">Initialize Controller / Refresh List <img class="controllerButton" src="images/360_A.png">Join Game <img class="controllerButton" src="images/360_Back.png">Close Browser</div>
     <div id="partyBorder">
         <div id="partyHeader">Party List<button class="addPartyMember" onClick="showOnline();">+</button><button class="toggleChat" onClick="showChat();">Chat</button></div>
         <div id="allOnline"></div>
