Moved to dew.js, uses native ping, improved settings

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Server Browser</title>
 		<!-- Includes -->
 		<script src="js/handlebars.min.js"></script>
-		<script src="js/jquery-1.11.3.min.js"></script>
+        <script src="dew://lib/jquery-2.2.1.min.js"></script>
         <script src="js/jquery-ui.js"></script>
 		<!-- DataTables -->
 		<link rel="stylesheet" href="css/jquery.dataTables.min.css">
@@ -17,7 +17,7 @@
         <!-- Gamepad support -->
         <script src="js/gamepad.js"></script>
 		<!-- Eldorito Stuff -->
-		<script src="js/dewRcon.js"></script>
+        <script type="text/javascript" src="dew://lib/dew.js"></script>
         <script src="js/friendServer.js"></script>
 		<!-- Custom stuff -->
 		<script src="js/browser.js"></script>
