--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<h3 class="browserTitle">Server Browser</h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="refreshTable();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
+    <button class="quickMatch" onclick="quickMatch();">Quick Match<img class="controllerButton" src="images/XboxOne_Y.png"></button>
 	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/360_Back.png"></button>
     <button class="togglePartyList" onClick="showPartyList();">Party</button>
     <!--<div id="connectionStatus"></div>-->
