Move to sweetalert2

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 		<script src="js/jquery.dataTables.min.js"></script>
 		<script src="js/mousetrap.min.js"></script>
 		<!-- Sweet Alert -->
-        <script src="js/sweetalert.min.js"></script> 
-        <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
-        <link rel="stylesheet" type="text/css" href="css/eldorito.css">
+        <script src="js/sweetalert2.min.js"></script> 
+        <link rel="stylesheet" type="text/css" href="css/sweetalert2.css">       
         <!-- Gamepad support -->
         <script src="js/gamepad.js"></script>
 		<!-- Eldorito Stuff -->
@@ -54,6 +53,7 @@
 	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/360_Back.png"></button>
     <button class="togglePartyList" onClick="showPartyList();">Party</button>
     <!--<div id="connectionStatus"></div>-->
+    <button class="howToServe" onclick="howToServe();">How To Host</button>
     <table id="serverTable" class="display" width="100%"></table>
     <div id="gamecard">
     </div>
