Zoom slider prototype
Needs to be implemented in some sort of settings view.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <button class="togglePartyList" onClick="showPartyList();">Party</button>
     <!--<div id="connectionStatus"></div>-->
     <button class="howToServe" onclick="howToServe();">How To Host</button>
+    <div id="zoomSlider" class="slider"></div>
     <table id="serverTable" class="display" width="100%"></table>
     <div id="gamecard">
     </div>
