SweetAlert2 doesn't have an input modal
They say they do, and they demo one, it just doesn't actually exist

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 		<script src="js/jquery.dataTables.min.js"></script>
 		<script src="js/mousetrap.min.js"></script>
 		<!-- Sweet Alert -->
-        <script src="js/sweetalert2.min.js"></script> 
-        <link rel="stylesheet" type="text/css" href="css/sweetalert2.css">       
+        <script src="js/sweetalert.min.js"></script> 
+        <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
+        <link rel="stylesheet" type="text/css" href="css/eldorito.css">    
         <!-- Gamepad support -->
         <script src="js/gamepad.js"></script>
 		<!-- Eldorito Stuff -->
