--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<!-- Sweet Alert -->
         <script src="js/sweetalert.min.js"></script> 
         <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
-        <link rel="stylesheet" type="text/css" href="css/eldorito.css">
         <!-- Gamepad support -->
         <script src="js/gamepad.js"></script>
 		<!-- Eldorito Stuff -->
         <script type="text/javascript" src="dew://lib/dew.js"></script>
+        <script type="text/javascript" src="js/dewRcon.js"></script>
 		<!-- Custom stuff -->
 		<script src="js/browser.js"></script>
 		<link rel="stylesheet" href="css/browser.css">
@@ -39,7 +39,11 @@
 	<h3 class="browserTitle">Server Browser</h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="refreshTable();">Refresh</button>
-	<button class="closeButton" onclick="closeBrowser();">X</button>
+    <button class="quickMatch" onclick="quickMatch();">Quick Match</button>
+    <button class="howToServe" onclick="howToServe();">How To Host</button>
+    <button class="closeButton" onclick="closeBrowser();">X</button>
+    <progress class="serverPool" value="0" max="100"></progress>
+    <div id="zoomSlider" class="slider"></div>
     <table id="serverTable" class="display" width="100%"></table>
     <div id="gamecard">
     </div>
@@ -49,7 +53,7 @@
     <!--<button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>   
     <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button> -->
     
-    <div id="xboxLabel"><img class="controllerButton" src="images/360_Y.png">Initialize Controller / Refresh List <img class="controllerButton" src="images/360_A.png">Join Game <img class="controllerButton" src="images/360_Back.png">Close Browser</div>
+    <div id="xboxLabel"><img class="controllerButton" src="images/360_Y.png">Initialize Controller / Refresh List <img class="controllerButton" src="images/360_X.png">Quick Match <img class="controllerButton" src="images/360_A.png">Join Game <img class="controllerButton" src="images/360_Back.png">Close Browser</div>
     
     <script id="gameinfo-template" type="text/x-handlebars-template">
         <div id="cardheaderborder">
