Better check for dew, removed rcon, new gamepad js

--- a/index.html
+++ b/index.html
@@ -13,22 +13,31 @@
         <script src="js/sweetalert.min.js"></script> 
         <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
         <!-- Gamepad support -->
-        <script src="js/gamepad.js"></script>
+        <script src="js/gamepad.min.js"></script>
 		<!-- Eldorito Stuff -->
-        <script type="text/javascript" src="dew://lib/dew.js"></script>
+        <script>
+            var dewConnected;
+            $.getScript( "dew://lib/dew.js" )
+            .done(function() {
+                dewConnected = true;
+            })
+            .fail(function() {
+                dewConnected = false;
+            });
+        </script>
 		<!-- Custom stuff -->
 		<script src="js/browser.js"></script>
 		<link rel="stylesheet" href="css/browser.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-72472081-1', 'auto');
-          ga('send', 'pageview');
+            ga('create', 'UA-72472081-1', 'auto');
+            ga('send', 'pageview');
         </script>
 
 </head>
