Organized some css

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <body>
 	<h3 class="browserTitle">Server Browser</h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
-    <button class="refresh" onclick="refreshTable();">Refresh</button>
-    <button class="quickMatch" onclick="quickMatch();">Quick Match</button>
-    <button class="howToServe" onclick="howToServe();">How To Host</button>
-    <button class="closeButton" onclick="closeBrowser();">X</button>
+    <div class="refresh" onclick="refreshTable();">Refresh</div>
+    <div class="quickMatch" onclick="quickMatch();">Quick Match</div>
+    <div class="howToServe" onclick="howToServe();">How To Host</div>
+    <div class="closeButton" onclick="closeBrowser();">X</div>
     <progress class="serverPool" value="0" max="100"></progress>
     <div id="zoomSlider" class="slider"></div>
     <table id="serverTable" class="display" width="100%"></table>
