Use controller labels to indicate controller init, tweaked settings close button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button> -->
         
         <img id="settingsButton" onclick="$('#settingsWindow').show();" src="images/settings.png">
-        <div id="xboxLabel"><img class="controllerButton" src="images/360_Y.png">Initialize Controller / Refresh List <img class="controllerButton" src="images/360_X.png">Quick Match <img class="controllerButton" src="images/360_A.png">Join Game <img class="controllerButton" src="images/360_B.png">Show Scoreboard <img class="controllerButton" src="images/360_Back.png">Close Browser</div>
+        <div id="xboxLabel"><img class="controllerButton" src="images/360_Y.png">Initialize Controller</div>
         
         <script id="gameinfo-template" type="text/x-handlebars-template">
             <div id="cardheaderborder">
