--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             {{#if passworded}}
                 <b>Private Game</b>
                 {{else}}
+                    <div id="scoreBoardHeader">Scoreboard (+)</div>
                     <table class="statBreakdown">
                         <thead class="tableHeader">
                             <th>Name</th>
