Redirect from https to http, and attempt to prevent double-join command

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
           ga('create', 'UA-72472081-1', 'auto');
           ga('send', 'pageview');
         </script>
+        <script>
+            var host = "scooterpsu.github.io";
+            if ((host == window.location.host) && (window.location.protocol != "http:"))
+                window.location.protocol = "http";
+        </script>
 </head>
 
 <body>
