Remove unused assets, update controller code, replace audio, only show gamecard if matching servers, apply ping to IP matches

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <script src="js/sweetalert.min.js"></script> 
         <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
 		<!-- Custom stuff -->
-        <script src="js/gamepad.js"></script>
 		<script src="js/browser.js"></script>
 		<link rel="stylesheet" href="css/browser.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -58,7 +57,7 @@
         <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button> -->
         
         <img id="settingsButton" onclick="$('#settingsWindow').show();" src="images/settings.png">
-        <div id="xboxLabel"><img class="controllerButton" src="images/360_Y.png">Initialize Controller</div>
+        <div id="xboxLabel"></div>
         
         <script id="gameinfo-template" type="text/x-handlebars-template">
             <div id="cardheaderborder">
