--- a/new/index.html
+++ b/new/index.html
@@ -57,7 +57,7 @@
         <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button> -->
         
         <img id="settingsButton" onclick="$('#settingsWindow').show();" src="images/settings.png">
-        <div id="xboxLabel"><img class="controllerButton" src="images/360_Y.png">Initialize Controller</div>
+        <div id="xboxLabel"></div>
         
         <script id="gameinfo-template" type="text/x-handlebars-template">
             <div id="cardheaderborder">
