Update to sweetalert2
Should fix scaling issues, and has a bit more customization

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="css/jquery.dataTables.min.css">
 		<script src="js/jquery.dataTables.min.js"></script>
 		<!-- Sweet Alert -->
-        <script src="js/sweetalert.min.js"></script> 
-        <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
+        <script src="js/sweetalert2.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/sweetalert2.min.css">       
 		<!-- Custom stuff -->
 		<script src="js/browser.js"></script>
 		<link rel="stylesheet" href="css/browser.css">
