Add control to switch to other 0.6 supporting browsers, intial support for "offical" dedis, hide h3ui for better views

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div class="refresh" onclick="refreshTable();">Refresh</div>
         <div class="quickMatch" onclick="quickMatch();">Quick Match</div>
         <div class="howToServe" onclick="howToServe();">How To Host</div>
+        <div class="browserSwitch" onclick="switchBrowser();">Switch Browser</div>
         <label class="searchLabel" for="searchBox">Search: </label><input type="text" id="searchBox">
         <div class="closeButton" onclick="closeBrowser();">X</div>
         <progress class="serverPool" value="0" max="100"></progress>
@@ -53,8 +54,6 @@
         <div id="backgroundFrame">
         <div id="backgroundFrameInsert"></div>
         </div>
-        <!--<button class="browserSwitch feeltrain" onclick="switchBrowser('theFeelTrain');">Switch to theFeelTrain</button>   
-        <button class="browserSwitch dewmenu" onclick="switchBrowser('DewMenu');">Switch to DewMenu</button> -->
         
         <img id="settingsButton" onclick="$('#settingsWindow').show();" src="images/settings.png">
         <div id="xboxLabel"></div>
