--- a/new/index.html
+++ b/new/index.html
@@ -6,6 +6,7 @@
 		<script src="js/handlebars.min.js"></script>
         <script src="js/jquery-2.2.1.min.js"></script>
         <script src="js/jquery-ui.js"></script>
+        <script src="js/Tooltip.js"></script>
 		<!-- DataTables -->
 		<link rel="stylesheet" href="css/jquery.dataTables.min.css">
 		<script src="js/jquery.dataTables.min.js"></script>
