Copy browserSwitch control from overlay2

--- a/new/index.html
+++ b/new/index.html
@@ -45,6 +45,7 @@
         <div class="refresh" onclick="refreshTable();">Refresh</div>
         <div class="quickMatch" onclick="quickMatch();">Quick Match</div>
         <div class="howToServe" onclick="howToServe();">How To Host</div>
+        <div class="browserSwitch" onclick="switchBrowser();">Switch Browser</div>
         <label class="searchLabel" for="searchBox">Search: </label><input type="text" id="searchBox">
         <div class="closeButton" onclick="closeBrowser();">X</div>
         <progress class="serverPool" value="0" max="100"></progress>
