--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="js/sweetalert2.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/sweetalert2.min.css">       
 		<!-- Custom stuff -->
+        <script src="js/blamList.js"></script>
 		<script src="js/browser.js"></script>
 		<link rel="stylesheet" href="css/browser.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
